# cloud-canvas

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cleanup-gen-ui-client.sh  cloudbuild-api-kaniko.yaml  cloudbuild-kaniko.yaml  cloudbuild-ui-kaniko.yaml  cloudbuild.yaml  docker-compose.yaml  format-loop.sh
api/: .env-example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ada.yaml  cloudbuild-kaniko.yaml  pyproject.toml
api/alembic/versions/: 20240818_231946_init_db.py  20240823_074656_add_credentials.py  20240824_214005_add_enum.py  20240824_214125_add_enum_two.py  20240825_035808_allow_creds_to_be_associated_with_.py  20240825_040501_misc.py  20240827_171240_enums.py  20240827_181044_drop_column.py  20240827_181123_add_column.py  20240827_232419_connections_project_packages.py
api/app/: main.py
api/app/api/: api.py
api/app/core/: config.py  dependencies.py  logger.py  middleware.py  pubsub.py  security.py  websocket_manager.py
api/app/crud/: connection.py  credential.py  org.py  package.py  project.py  project_package.py
api/app/db/: base.py  base_class.py  session.py
api/app/models/: __init__.py  connection.py  credential.py  organization_reference.py  package.py  project.py  project_package.py  user_reference.py
api/app/schemas/: api_token.py  connection.py  credential.py  organization.py  package.py  project.py  project_package.py  provisioner_project_package.py  user.py
api/app/scripts/: lint.py  seed.py
api/data/: openapi-spec.yaml
api/scripts/: gen_openapi_spec.py  upload_packages.py
api/src/: config.py  connections_handler.py  deployer.py  gcs_service.py  main.py  package_handler.py  package_utils.py  project_handler.py  project_package_handler.py  test_output.py  upload_packages.py  user_handler.py  utils.py
api/terraform-modules/cloud-run/: main.tf
api/terraform-modules/dialogflow-agent/: main.tf
api/terraform-modules/dialogflow-page/: infra.yaml  main.tf
api/terraform-modules/gh-org/: providers.tf
api/terraform-modules/gh-team/: providers.tf
api/terraform-modules/pubsub/: providers.tf
api/terraform-modules/subnet/: variables.tf
api/tests/: conftest.py  credential.py  test_api_chats.py  test_api_projects.py  test_crud_project.py  test_db.py  test_login.py
api_gcs_old/: .dockerignore  Makefile  pyproject.toml
api_gcs_old/deployments/04a27558-446a-404b-8227-fe15dc3cba40/: backend.tf  providers.tf
api_gcs_old/deployments/0d9a175d-8257-4c1e-bc5a-a0ad06bde2a4/: 0d9a175d-8257-4c1e-bc5a-a0ad06bde2a4_output.json  backend.tf
api_gcs_old/deployments/5ffeb767-b614-4feb-97e9-40a2fc29fd0e/: 5ffeb767-b614-4feb-97e9-40a2fc29fd0e_output.json  backend.tf
api_gcs_old/src/: config.py  connections_handler.py  deployer.py  gcs_service.py  main.py  package_handler.py  package_utils.py  project_handler.py  project_package_handler.py  test_output.py  upload_packages.py  user_handler.py  utils.py
(+417 files in other folders)
